force-app/main/default/objects/Workspace__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <description>Primary email associated with the workspace for billing purposes (used to link to leads and deals)</description>
    <inlineHelpText>Primary email associated with the workspace for billing purposes (used to link to leads and deals)</inlineHelpText>
    <label>Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>