force-app/main/default/objects/Workspace__c/fields/Active_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Count__c</fullName>
    <description>Number of users active in the workspace in past 30 days</description>
    <inlineHelpText>Number of users active in the workspace in past 30 days</inlineHelpText>
    <label>Active User Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>