force-app/main/default/objects/Workspace__c/fields/Amount_Due_On_Open_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_On_Open_Invoices__c</fullName>
    <description>Total amount due on open invoices for this customer</description>
    <inlineHelpText>Total amount due on open invoices for this customer</inlineHelpText>
    <label>Amount Due On Open Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>