force-app/main/default/objects/Workspace__c/fields/Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Amount_Overdue__c</fullName>
    <description>Total payment amount balance due on this customer&apos;s overdue invoices.</description>
    <inlineHelpText>Total payment amount balance due on this customer&apos;s overdue invoices.</inlineHelpText>
    <label>Amount Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>