force-app/main/default/objects/Workspace__c/fields/API_Character_Usage_Last_30__c.field-meta.xml
<CustomField>
    <fullName>API_Character_Usage_Last_30__c</fullName>
    <description>Total API characters used last 30 days</description>
    <inlineHelpText>Total API characters used last 30 days</inlineHelpText>
    <label>API Character Usage Last 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>