force-app/main/default/objects/Workspace__c/fields/API_Percent_Usage__c.field-meta.xml
<CustomField>
    <fullName>API_Percent_Usage__c</fullName>
    <description>Percent of total usage that was through the API</description>
    <inlineHelpText>Percent of total usage that was through the API</inlineHelpText>
    <label>API Percent Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>