force-app/main/default/objects/Workspace__c/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <description>The URL of an avatar image</description>
    <inlineHelpText>The URL of an avatar image</inlineHelpText>
    <label>Avatar URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>