force-app/main/default/objects/Workspace__c/fields/Deal_Record_IDs__c.field-meta.xml
<CustomField>
    <fullName>Deal_Record_IDs__c</fullName>
    <label>Deal Record IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>