force-app/main/default/objects/Workspace__c/fields/Deals__c.field-meta.xml
<CustomField>
    <fullName>Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deals</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Workspaces</relationshipLabel>
    <relationshipName>Workspaces</relationshipName>
    <type>Lookup</type>
</CustomField>