force-app/main/default/objects/Workspace__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Website domain of the customer&apos;s email that they used to sign up with - used to identify businesses who sign up and ignores personal email domains</description>
    <inlineHelpText>Website domain of the customer&apos;s email that they used to sign up with - used to identify businesses who sign up and ignores personal email domains</inlineHelpText>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>