force-app/main/default/objects/Workspace__c/fields/External_Workspace_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Workspace_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Workspace ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>