force-app/main/default/objects/Workspace__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <description>Last time that this data was synced from data warehouse</description>
    <inlineHelpText>Last time that this data was synced from data warehouse</inlineHelpText>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>