force-app/main/default/objects/Workspace__c/fields/Lifetime_API_Usage__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_API_Usage__c</fullName>
    <description>Total API characters used ever</description>
    <inlineHelpText>Total API characters used ever</inlineHelpText>
    <label>Lifetime API Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>