force-app/main/default/objects/Workspace__c/fields/Lifetime_Total_Character_Usage__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Total_Character_Usage__c</fullName>
    <label>Lifetime Total Character Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>