force-app/main/default/objects/Workspace__c/fields/Number_of_Open_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Invoices__c</fullName>
    <description>Number of invoices open pending customer payment and within due date.</description>
    <inlineHelpText>Number of invoices open pending customer payment and within due date.</inlineHelpText>
    <label>Number of Open Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>