force-app/main/default/objects/Workspace__c/fields/Number_of_Overdue_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Overdue_Invoices__c</fullName>
    <description>Number of overdue invoices in Stripe. Indicates that the customer has not been paying invoices in time and may be in jeopardy of having their account suspended</description>
    <inlineHelpText>Number of overdue invoices in Stripe. Indicates that the customer has not been paying invoices in time and may be in jeopardy of having their account suspended</inlineHelpText>
    <label>Number of Overdue Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>