force-app/main/default/objects/Workspace__c/fields/Number_Uncollectible_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_Uncollectible_Invoices__c</fullName>
    <description>The number of invoices in stripe marked as uncollectible. Indicates that customer has not been paying their bills.</description>
    <inlineHelpText>The number of invoices in stripe marked as uncollectible. Indicates that customer has not been paying their bills.</inlineHelpText>
    <label>Number Uncollectible Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>