force-app/main/default/objects/Workspace__c/fields/PercAudio_Native_Character_Usage_Last_14__c.field-meta.xml
<CustomField>
    <fullName>PercAudio_Native_Character_Usage_Last_14__c</fullName>
    <label>% Audio Native Character Usage Last 14</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>