force-app/main/default/objects/Workspace__c/fields/Percent_Dubbing_Character_Usage_Last_14__c.field-meta.xml
<CustomField>
    <fullName>Percent_Dubbing_Character_Usage_Last_14__c</fullName>
    <label>% Dubbing Character Usage Last 14</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>