force-app/main/default/objects/Workspace__c/fields/Percent_Quota_Used__c.field-meta.xml
<CustomField>
    <fullName>Percent_Quota_Used__c</fullName>
    <label>Percent Quota Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>