force-app/main/default/objects/Workspace__c/fields/Percent_Total_Character_Usage_Last_30__c.field-meta.xml
<CustomField>
    <fullName>Percent_Total_Character_Usage_Last_30__c</fullName>
    <label>% Total Character Usage Last 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>