force-app/main/default/objects/Workspace__c/fields/PQL_Score_from_Total_Characters__c.field-meta.xml
<CustomField>
    <fullName>PQL_Score_from_Total_Characters__c</fullName>
    <description>The PQL score derived from scoring algorithm based on characters used</description>
    <inlineHelpText>The PQL score derived from scoring algorithm based on characters used</inlineHelpText>
    <label>PQL Score from Total Characters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>