force-app/main/default/objects/Workspace__c/fields/Stripe_Customer_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Created_At__c</fullName>
    <label>Stripe Customer Created At</label>
    <type>DateTime</type>
</CustomField>