force-app/main/default/objects/Workspace__c/fields/Stripe_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Email__c</fullName>
    <label>Stripe Customer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>