force-app/main/default/objects/Workspace__c/fields/Stripe_Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Link__c</fullName>
    <description>URL Link to Customer&apos;s page in Stripe</description>
    <inlineHelpText>URL Link to Customer&apos;s page in Stripe</inlineHelpText>
    <label>Stripe Customer Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>