force-app/main/default/objects/Workspace__c/fields/Stripe_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Name__c</fullName>
    <description>Name of the customer from Stripe</description>
    <inlineHelpText>Name of the customer from Stripe</inlineHelpText>
    <label>Stripe Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>