force-app/main/default/objects/Workspace__c/fields/Stripe_Delinquent_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Delinquent_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the account in stripe has overdue invoices</description>
    <inlineHelpText>Whether the account in stripe has overdue invoices</inlineHelpText>
    <label>Stripe Delinquent Status</label>
    <type>Checkbox</type>
</CustomField>