force-app/main/default/objects/Workspace__c/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <description>Subscription tier based on latest logged data (always check admin for latest)</description>
    <inlineHelpText>Subscription tier based on latest logged data (always check admin for latest)</inlineHelpText>
    <label>Subscription Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>