force-app/main/default/objects/Workspace__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title for the workspace for readability</description>
    <inlineHelpText>Title for the workspace for readability</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>