force-app/main/default/objects/Workspace__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <description>Total spend of this workspace</description>
    <inlineHelpText>Total spend of this workspace</inlineHelpText>
    <label>Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>