force-app/main/default/objects/Workspace__c/fields/Uncollectible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Uncollectible_Amount__c</fullName>
    <description>Total due amount of the uncollectible invoices for this customer</description>
    <inlineHelpText>Total due amount of the uncollectible invoices for this customer</inlineHelpText>
    <label>Uncollectible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>