force-app/main/default/objects/Workspace__c/fields/Usage_Metrics_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Usage_Metrics_Start_Date__c</fullName>
    <description>Usage metrics (&quot;Total Usage Last 30&quot;, &quot;TTS Usage Last 30&quot;, etc.) are summed from this date onwards</description>
    <inlineHelpText>Usage metrics (&quot;Total Usage Last 30&quot;, &quot;TTS Usage Last 30&quot;, etc.) are summed from this date onwards</inlineHelpText>
    <label>Usage Metrics Start Date</label>
    <type>Date</type>
</CustomField>