force-app/main/default/objects/Workspace__c/fields/User_Emails__c.field-meta.xml
<CustomField>
    <fullName>User_Emails__c</fullName>
    <description>List of emails for users in this workspace</description>
    <inlineHelpText>List of emails for users in this workspace</inlineHelpText>
    <label>User Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>