force-app/main/default/objects/Workspace__c/fields/User_IDs__c.field-meta.xml
<CustomField>
    <fullName>User_IDs__c</fullName>
    <description>List of users IDs for users who are in this workspace</description>
    <inlineHelpText>List of users IDs for users who are in this workspace</inlineHelpText>
    <label>User IDs</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>